crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_rare_basic.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | rare 3 service\")"
---
WITH _s0 AS (
  SELECT "service", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  GROUP BY "service"
)
SELECT *
FROM "_s0"
ORDER BY "count" ASC
LIMIT 3
