crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_rename_single.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | rename service as svc\")"
---
SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('service', 'svc')), "service" AS "svc"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
