crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_sample_count.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | sample 1000\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
USING SAMPLE 1000 ROWS (reservoir)
