crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_sort_desc.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | sort -count\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
ORDER BY "count" DESC
