crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_stats_avg.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats avg(duration)\")"
---
SELECT AVG("duration") AS "avg_duration"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
